--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <button onclick="connectWC()">Connect Wallet Connect</button>
 
     <script type="text/javascript">
+        // ######## WalletConnect Web3 Provider #######
+
         var account;
 
         // https://docs.walletconnect.com/quick-start/dapps/web3-provider
